Fix store link margin on mobile in global nav

--- a/app/assets/stylesheets/module-nav.css.scss
+++ b/app/assets/stylesheets/module-nav.css.scss
@@ -30,3 +30,7 @@
     margin-right: 12px;
     line-height: .6;
 }
+
+.nav-list--group-social {
+    margin-bottom: 55px;
+}
